docs: add rollup & mac usage

--- a/docs/ide/git/1.md
+++ b/docs/ide/git/1.md
@@ -75,3 +75,14 @@ git tag              # 列出所有本地标签
 git tag [tag]        # 基于最新提交创建标签
 git tag -d [tag]     # 删除标签
 ```
+
+## 9. 暂存文件
+### git stash
+```sh
+git stash      # 存储修改内容
+git stash save <message> # 存储修改内容，并以 message 注释
+git stash list # 查看存储内容列表
+git stash pop  # 弹出存储内容队列最上层的修改
+git stash drop stash@{0} # 删除存储列表最上层的修改
+git stash clear # 删除存储内容列表
+```
