docs: es inheritance

--- a/docs/es/0.md
+++ b/docs/es/0.md
@@ -4,3 +4,7 @@
 + [ES402](http://www.ecma-international.org/publications/standards/Ecma-402.htm)：制定 ES5 和后面版本的国际化 API 标准
 + ES404：JSON 规范
 + ES414：规定了和 ECMAScript 相关的标准有哪些（即上述 3 条）
+
+## ES 知识
++ 面向对象（Object-Oriented）
+  - [继承/Inheritance](inheritance.md)
