docs: add git-3

--- a/docs/eng/git/1.md
+++ b/docs/eng/git/1.md
@@ -1,19 +1,19 @@
 # Git 命令 —— 基础
 
-## 1.配置 
+### 1.配置 
 ```sh
 git config --global user.name '[username]'       # 配置全局用户名
 git config --global user.email '[email address]' # 配置全局邮箱
 # 不使用 --global，配置当前仓库
 ``` 
 
-## 2.创建仓库
+### 2.创建仓库
 ```sh
 git init <directory>    # 初始化仓库（本地创建）
 git clone [repository] <directory> # 克隆仓库（远程克隆）
 ```
 
-## 3.分支操作
+### 3.分支操作
 ```sh
 git branch               # 列出本地分支
 git branch -r            # 列出远程分支
@@ -29,7 +29,7 @@ git push -d origin [branch]    # 删除指定远程分支
 git branch -dr [remote/branch] # 删除指定远程分支
 ```
 
-## 4.同步远程仓库（代码拉取、推送） 
+### 4.同步远程仓库（代码拉取、推送） 
 ```sh
 git remote -v            # 查看所有远程仓库
 git remote show [remote] # 查看某个远程仓库
@@ -41,7 +41,7 @@ git pull <remote> <branch> # 拉取远程仓库的修改，并与本地分支合
 git push <remote> <branch> # 推送指定分支到远程仓库
 ```
 
-## 5.提交修改文件
+### 5.提交修改文件
 ```sh
 # git add 将 workspace 工作区中的修改提交到 Stage 暂存区
 git add .               # 提交所有文件
@@ -51,7 +51,7 @@ git commit -m [message] # 提交暂存区到本地仓库
 git commit --amend -m [message] # 修改上一次的提交，如果代码变化则替换上一次的提交
 ```
 
-## 6.查看信息
+### 6.查看信息
 ```sh
 git status             # 显示变更文件的状态
 git log                # 显示当前分支的提交历史
@@ -62,26 +62,27 @@ git show               # 显示最新一次提交的具体修改
 git diff               # 显示暂存区与工作区的差异
 ```
 
-## 7.撤销操作
+### 7.撤销操作
 ```sh
 git reset --hard [commit] # 重置当前分支的 HEAD 为指定 commit，同时重置暂存区和工作区
 git reset --keep [commit] # 重置当前分支的 HEAD 为指定 commit，但保持暂存区和工作区
 git revert [commit]       # 新建一个 commit 来撤销指定 commit
 ```
 
-## 8.标签
+### 8.标签
 ```sh
 git tag              # 列出所有本地标签
 git tag [tag]        # 基于最新提交创建标签
 git tag -d [tag]     # 删除标签
 ```
 
-## 9. 暂存
+### 9. 贮藏
 ```sh
 git stash      # 存储修改内容
 git stash save <message> # 存储修改内容，并以 message 注释
 git stash list # 查看存储内容列表
-git stash pop  # 弹出存储内容队列最上层的修改
-git stash drop stash@{0} # 删除存储列表最上层的修改
+git stash pop  # 弹出存储内容列表最上层的修改
+git stash apply stash@{0} # 弹出存储列表中某一个修改，stash{0} 是第一个
+git stash drop stash@{0} # 删除存储列表某一个修改
 git stash clear # 删除存储内容列表
 ```
